welcome.lessons.welcome.bat.bool1.SumDouble.scala.error
sumDouble:3: error: illegal start of simple expression
}
^sumDouble:13: error: Unmatched closing brace '}' ignored here
 }
 ^