welcome.lessons.welcome.bat.bool1.SumDouble.scala.code
def sumDouble(a: Integer, b: Integer): Integer = {
var sum =
}
if (a=b) 
{
sum = a+b ;
}
if (a!=b)
{
sum = 2*(a+b);
}
}